Modo administrador - muestra todos los productos

--- a/taquistore/src/main/resources/static/style.css
+++ b/taquistore/src/main/resources/static/style.css
@@ -455,4 +455,10 @@
     .caja-cabecera-2-2{
         margin: 0 1em;
     }
+    
+    .imagen-menu-hamburguesa{
+        margin: 0 0.5em;
+    }
+
+    
 }
