--- a/taquistore/src/main/resources/templates/listaproductosgeneral.html
+++ b/taquistore/src/main/resources/templates/listaproductosgeneral.html
@@ -9,9 +9,14 @@
     </head>
     <body>
         
-        <!-- INSERTAR LA PLANTILLA DE LA CABECERA -->
-        <div th:insert="fragments/cabecera-pie :: fragmento-cabecera"></div>
-        <!-- UBICACIÓN Y NOMBRE DEL DOCUMENTO HTML :: NOMBRE DEL FRAGMENTO -->        
+        <div class="caja-cabecera">
+            <div th:insert="fragments/cabecera-pie :: fragmento-cabecera-1"></div>
+            <div th:insert="fragments/cabecera-pie :: fragmento-cabecera-2-desktop"></div>
+            <div th:insert="fragments/cabecera-pie :: fragmento-categorias-desktop"></div>
+            <div th:insert="fragments/cabecera-pie :: fragmento-cabecera-2-mobile"></div>
+            <div th:insert="fragments/cabecera-pie :: fragmento-cabecera-3-mobile"></div>
+            <div th:insert="fragments/cabecera-pie :: fragmento-menu-hamburguesa-mobile"></div>
+        </div>
         <h1>Comprar todo</h1>
         <form th:action="@{/productos}" autocomplete="off" method="GET">
             <h2>Filtrar por</h2>
