--- a/taquistore/src/main/resources/templates/listaproductosgeneral.html
+++ b/taquistore/src/main/resources/templates/listaproductosgeneral.html
@@ -17,37 +17,42 @@
             <div th:insert="fragments/cabecera-pie :: fragmento-cabecera-3-mobile"></div>
             <div th:insert="fragments/cabecera-pie :: fragmento-menu-hamburguesa-mobile"></div>
         </div>
-        <h1>Comprar todo</h1>
+        <h1 class="titulo-principal">Comprar todo</h1>
         
-        
-        
-        <form th:action="@{/productos}" autocomplete="off" method="GET">
-            <h2>Filtrar por</h2>
-            <!-- MENU DE FILTROS -->
-            <!-- INSERTAR LA PLANTILLA DEL FILTRO POR CATEGORIA -->
-            <div th:insert="fragments/filtros-busqueda :: fragmento-categoria"></div>
-            <!-- INSERTAR LA PLANTILLA DEL FILTRO POR MARCA -->
-            <div th:insert="fragments/filtros-busqueda :: fragmento-marca"></div>
-            <div th:insert="fragments/filtros-busqueda :: fragmento-precio"></div>
-            <div th:insert="fragments/filtros-busqueda :: fragmento-oferta"></div>
+        <div class="caja-grupo-filtros-productos">
+            
+            <form th:action="@{/productos}" autocomplete="off" method="GET">
+                <h2>Filtrar por</h2>
+                <!-- MENU DE FILTROS -->
+                <!-- INSERTAR LA PLANTILLA DEL FILTRO POR CATEGORIA -->
+                <div th:insert="fragments/filtros-busqueda :: fragmento-categoria"></div>
+                <!-- INSERTAR LA PLANTILLA DEL FILTRO POR MARCA -->
+                <div th:insert="fragments/filtros-busqueda :: fragmento-marca"></div>
+                <div th:insert="fragments/filtros-busqueda :: fragmento-precio"></div>
+                <div th:insert="fragments/filtros-busqueda :: fragmento-oferta"></div>
 
-            <input type="submit" value="Filtrar">
-        </form>
-        
-        
-        
-        <div>
-            <div th:insert="fragments/cuadros-productos :: fragmento-productos"></div>
+                <input type="submit" value="Filtrar">
+            </form>
+
+
+
+            <div>
+                <div th:insert="fragments/botones-paginacion :: fragmento-paginacion"></div>
+                <div th:insert="fragments/cuadros-productos :: fragmento-productos"></div>
+            </div>
+
         </div>
+        
 
         <script>
+            /*
             const queryParams = new URLSearchParams(window.location.search);
 queryParams.set('p-categoria', nuevaCategoriaId);
 queryParams.set('p-marcas', nuevasMarcas.join(','));
 // Agregar otros parámetros según sea necesario
 const nuevaURL = `${window.location.pathname}?${queryParams.toString()}`;
 window.history.pushState({}, '', nuevaURL);
-
+*/
         </script>
     </body>
 </html>
