Falta el diseño de cuadricula

--- a/Tienda/InitializrSpringbootProject/src/main/resources/templates/fragments/cabecera-pie.html
+++ b/Tienda/InitializrSpringbootProject/src/main/resources/templates/fragments/cabecera-pie.html
@@ -25,7 +25,7 @@
                     <a class="texto-cabecera-1-2" href="#">Acerca de</a>
                     <a class="texto-cabecera-1-2" href="#">Contacto</a>
                     <a class="texto-cabecera-1-2" href="#">Asistencia</a>
-                    <a class="texto-cabecera-1-2" href="#">Llama +51-959253346</a>
+                    <a class="texto-cabecera-1-2" href="#">Llama al 5550100</a>
                 </div>
             </div>
 
@@ -64,6 +64,7 @@
                         <span class="texto-cabecera-2-3-2">Salir</span>
                     </a>
                     <!-- -->
+                    <!-- 
                     <a class="texto-cabecera-2-3" href="#">
                         <img class="imagen-cabecera-2-3" th:src="@{/img/heart-icon.svg}">
                         <span class="texto-cabecera-2-3-3">Favoritos</span>
@@ -72,6 +73,7 @@
                         <img class="imagen-cabecera-2-3" th:src="@{/img/shopping-car-icon.svg}">
                         <div class="texto-cabecera-2-3-4">0</div>
                     </a>
+                    -->
 
 
                 </div>
@@ -149,6 +151,7 @@
                         <span class="texto-cabecera-2-3-2">Salir</span>
                     </a>
                     <!-- -->
+                    <!--
                     <a class="texto-cabecera-2-3" href="#">
                         <img class="imagen-cabecera-2-3" th:src="@{/img/heart-icon.svg}">
                         <span class="texto-cabecera-2-3-3">Favoritos</span>
@@ -157,6 +160,7 @@
                         <img class="imagen-cabecera-2-3" th:src="@{/img/shopping-car-icon.svg}">
                         <div class="texto-cabecera-2-3-4">0</div>
                     </a>
+                    -->
                 </div>
             </div>
 
