--- a/Tienda/InitializrSpringbootProject/src/main/resources/templates/login.html
+++ b/Tienda/InitializrSpringbootProject/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
         <h1>LOGIN</h1>
         <form th:action="@{/login}" method="POST">
             <div>
-                <label>Nombre de usuario: </label>
+                <label>Email: </label>
                 <input type="text" name="username" placeholder="digite su email ID">
             </div>
             <div>
@@ -33,6 +33,16 @@
             <div>
                 Si no tienes una cuenta, <a th:href="@{/registro}"> registrate aqui</a>
             </div>
+            <div>Mensaje: </div>
+            <!-- SI EL PARAMETRO "error" APARECE EN LA URL -->
+            <div th:if="${param.error}">
+                <div>Usuario o contraseña invalidos</div>
+            </div>
+            <!-- SI EL PARAMETRO "logout" APARECE EN LA URL -->
+            <div th:if="${param.logout}">
+                <div>Ha cerrado sesión exitosamente</div>
+            </div>
+
         </form>
     </body>
 </html>
