--- a/Tienda/InitializrSpringbootProject/src/main/resources/templates/fragments/cabecera-pie.html
+++ b/Tienda/InitializrSpringbootProject/src/main/resources/templates/fragments/cabecera-pie.html
@@ -69,11 +69,12 @@
                         <img class="imagen-cabecera-2-3" th:src="@{/img/heart-icon.svg}">
                         <span class="texto-cabecera-2-3-3">Favoritos</span>
                     </a>
-                    <a class="texto-cabecera-2-3" href="#">
-                        <img class="imagen-cabecera-2-3" th:src="@{/img/shopping-car-icon.svg}">
-                        <div class="texto-cabecera-2-3-4">0</div>
-                    </a>
                     -->
+                    
+                    <a class="texto-cabecera-2-3" th:href="@{/cart}">
+                        <img class="imagen-cabecera-2-3" th:src="@{/img/shopping-car-icon.svg}">
+                        <!-- <div class="texto-cabecera-2-3-4">0</div> -->
+                    </a>
 
 
                 </div>
